syntax = "proto3";

package proto.v1;

option go_package = "./;proto";

message AddRequest {
  int64 a = 1;
  int64 b = 2;
}
message MultiplyRequest {
  int64 a = 1;
  int64 b = 2;
}

message AddResponse {
  int64 result = 1;
}
message MultiplyResponse {
  int64 result = 1;
}

service Service {
  rpc Add(AddRequest) returns (AddResponse);
  rpc Multiply(MultiplyRequest) returns (MultiplyResponse);
}